# python-business-ml-starter

./: .gitignore  README.md  pyproject.toml  requirements.txt
chapter2/2.2. 回帰アルゴリズム: 不動産価格を予測しよう/: evaluate.py  notebook.ipynb  realestate_pred.csv  train.py
chapter2/2.3. 分類アルゴリズム: 社員の退職を予測しよう/: employee_pred.csv  employee_train.csv  notebook.ipynb
chapter3/3.2. 時系列アルゴリズム: 商品の売上を予測しよう/: notebook.ipynb  visitors.csv
chapter3/3.2. 時系列アルゴリズム: 商品の売上を予測しよう/data/: visitors_old.csv
chapter3/3.3. レコメンドアルゴリズム: 個人の趣向に沿った商品をオススメしてみよう/: animal_rating.csv  notebook.ipynb
chapter3/3.4. 異常検知アルゴリズム: ポンプの故障を検知しよう/: notebook.ipynb
chapter4/4.2. テキストデータ: 商品の口コミを分析してみよう/: .gitignore  noteboo.ipynb
chapter4/4.3. 画像データ: 画像を識別してみよう/: notebook.ipynb
chapter5/5.2. データ観察/: notebook.ipynb
chapter5/5.3. 特徴量生成/: notebook.ipynb  レビュー.csv  不動産ダミーデータ.csv  駅マスタ.csv
chapter5/5.3. 特徴量生成・学習/: notebook.ipynb
chapter5/5.5 機械学習モデルの学習と選択/: notebook.ipynb
chapter6/6.2. 予測を定期実行しよう/: model.pkl  output.csv  predict.py  predict_batch.py  realestate_train.csv  training.py
chapter6/6.2. 予測を定期実行しよう/data/: realestate_pred.csv
chapter6/6.3. リアルタイム予測をしよう/: fastapi_predict.py  model.pkl  streamlit_predict.py  train.py  training.py
chapter6/6.3. リアルタイム予測をしよう/data/: realestate.csv
data/バッチ予測/: prediction_output.csv
notebooks/: データ作成 2..ipynb  実用例⑤ NLP(レビュー感情分析).ipynb
scripts/: データ作成 2..ipynb
zzz_archive/data/: 2-1.csv
zzz_archive/data/バッチ予測/: prediction_input.csv
zzz_archive/notebooks/: 2021-07-03_5.3.ipynb  5.2_バッチ予測.ipynb
zzz_archive/scripts/: classify_review_prediction.py
(+1 files in other folders)
