[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "実務で役立つPython機械学習入門 課題解決のためのデータ分析の基礎"
version = "1.0.0"
authors = [""]
description = "実務で役立つPython機械学習入門 課題解決のためのデータ分析の基礎です"
license = "MIT"
readme = "README.md"

[dependencies]
pandas = ">=1.4.1"
scikit-learn = ">=1.0.3"
SudachiPy = ">=0.6.1"
gensim = ">=4.3.0"
torch = ">=1.11.0"
fastapi = ">=0.70.0"
uvicorn = ">=0.15.0"
seaborn = ">=0.13.0"
jupyter = ">=1.0.0"
kaggle = ">=1.5.16"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 180

# Assume Python 3.8
target-version = "py38"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10